<resources>
    <string name="app_name">Blackjack</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="zero">0</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="jqk">Jack, Queen, King</string>
    <string name="ace">Ace</string>
    <string name="one">1</string>
    <string name="or">or</string>
    <string name="eleven">11</string>
    <string name="one_space" />
    <string name="new_game">New Game?</string>
</resources>
