<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    tools:context="com.example.user.blackjack.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/player_one"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/player_one_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/zero"
                    android:textSize="64sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:id="@+id/button2PlayerOne"
                        style="@style/pointsButtonLeft"
                        android:layout_toLeftOf="@id/button3PlayerOne"
                        android:layout_toStartOf="@id/button3PlayerOne"
                        android:text="@string/two" />

                    <Button
                        android:id="@+id/button3PlayerOne"
                        style="@style/pointsButtonMiddle"
                        android:text="@string/three" />

                    <Button
                        android:id="@+id/button4PlayerOne"
                        style="@style/pointsButtonRight"
                        android:layout_toEndOf="@id/button3PlayerOne"
                        android:layout_toRightOf="@id/button3PlayerOne"
                        android:text="@string/four" />

                    <Button
                        android:id="@+id/button5PlayerOne"
                        style="@style/pointsButtonLeft"
                        android:layout_below="@id/button2PlayerOne"
                        android:layout_toLeftOf="@id/button6PlayerOne"
                        android:layout_toStartOf="@id/button6PlayerOne"
                        android:text="@string/five" />

                    <Button
                        android:id="@+id/button6PlayerOne"
                        style="@style/pointsButtonMiddle"
                        android:layout_below="@id/button3PlayerOne"
                        android:text="@string/six" />

                    <Button
                        android:id="@+id/button7PlayerOne"
                        style="@style/pointsButtonRight"
                        android:layout_below="@id/button4PlayerOne"
                        android:layout_toEndOf="@id/button6PlayerOne"
                        android:layout_toRightOf="@id/button6PlayerOne"
                        android:text="@string/seven" />

                    <Button
                        android:id="@+id/button8PlayerOne"
                        style="@style/pointsButtonLeft"
                        android:layout_below="@id/button5PlayerOne"
                        android:layout_toLeftOf="@id/button9PlayerOne"
                        android:layout_toStartOf="@id/button9PlayerOne"
                        android:text="@string/eight" />

                    <Button
                        android:id="@+id/button9PlayerOne"
                        style="@style/pointsButtonMiddle"
                        android:layout_below="@id/button6PlayerOne"
                        android:text="@string/nine" />

                    <Button
                        android:id="@+id/button10PlayerOne"
                        style="@style/pointsButtonRight"
                        android:layout_below="@id/button7PlayerOne"
                        android:layout_toEndOf="@id/button9PlayerOne"
                        android:layout_toRightOf="@id/button9PlayerOne"
                        android:text="@string/ten" />

                </RelativeLayout>

                <Button
                    android:id="@+id/JQKP1"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/jqk" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/ace"
                    android:textSize="24sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/playerOneAce1"
                        style="@style/aceButton1"
                        android:layout_toLeftOf="@+id/playerOneOr"
                        android:layout_toStartOf="@+id/playerOneOr"
                        android:text="@string/one" />

                    <TextView
                        android:id="@+id/playerOneOr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/or"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/playerOneAce11"
                        style="@style/aceButton11"
                        android:layout_toEndOf="@+id/playerOneOr"
                        android:layout_toRightOf="@+id/playerOneOr"
                        android:text="@string/eleven" />

                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/player_two"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/player_two_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/zero"
                    android:textSize="64sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:id="@+id/button2PlayerTwo"
                        style="@style/pointsButtonLeft"
                        android:layout_toLeftOf="@id/button3PlayerTwo"
                        android:layout_toStartOf="@id/button3PlayerTwo"
                        android:text="@string/two" />

                    <Button
                        android:id="@+id/button3PlayerTwo"
                        style="@style/pointsButtonMiddle"
                        android:text="@string/three" />

                    <Button
                        android:id="@+id/button4PlayerTwo"
                        style="@style/pointsButtonRight"
                        android:layout_toEndOf="@id/button3PlayerTwo"
                        android:layout_toRightOf="@id/button3PlayerTwo"
                        android:text="@string/four" />

                    <Button
                        android:id="@+id/button5PlayerTwo"
                        style="@style/pointsButtonLeft"
                        android:layout_below="@id/button2PlayerTwo"
                        android:layout_toLeftOf="@id/button6PlayerTwo"
                        android:layout_toStartOf="@id/button6PlayerTwo"
                        android:text="@string/five" />

                    <Button
                        android:id="@+id/button6PlayerTwo"
                        style="@style/pointsButtonMiddle"
                        android:layout_below="@id/button3PlayerTwo"
                        android:text="@string/six" />

                    <Button
                        android:id="@+id/button7PlayerTwo"
                        style="@style/pointsButtonRight"
                        android:layout_below="@id/button4PlayerTwo"
                        android:layout_toEndOf="@id/button6PlayerTwo"
                        android:layout_toRightOf="@id/button6PlayerTwo"
                        android:text="@string/seven" />

                    <Button
                        android:id="@+id/button8PlayerTwo"
                        style="@style/pointsButtonLeft"
                        android:layout_below="@id/button5PlayerTwo"
                        android:layout_toLeftOf="@id/button9PlayerTwo"
                        android:layout_toStartOf="@id/button9PlayerTwo"
                        android:text="@string/eight" />

                    <Button
                        android:id="@+id/button9PlayerTwo"
                        style="@style/pointsButtonMiddle"
                        android:layout_below="@id/button6PlayerTwo"
                        android:text="@string/nine" />

                    <Button
                        android:id="@+id/button10PlayerTwo"
                        style="@style/pointsButtonRight"
                        android:layout_below="@id/button7PlayerTwo"
                        android:layout_toEndOf="@id/button9PlayerTwo"
                        android:layout_toRightOf="@id/button9PlayerTwo"
                        android:text="@string/ten" />

                </RelativeLayout>

                <Button
                    android:id="@+id/JQKP2"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/jqk" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/ace"
                    android:textSize="24sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/playerTwoAce1"
                        style="@style/aceButton1"
                        android:layout_toLeftOf="@+id/playerTwoOr"
                        android:layout_toStartOf="@+id/playerTwoOr"
                        android:text="@string/one" />

                    <TextView
                        android:id="@+id/playerTwoOr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/or"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/playerTwoAce11"
                        style="@style/aceButton11"
                        android:layout_toEndOf="@+id/playerTwoOr"
                        android:layout_toRightOf="@+id/playerTwoOr"
                        android:text="@string/eleven" />

                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/gameResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/one_space"
            android:textSize="25sp" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:onClick="resetButton"
            android:text="@string/reset" />


    </LinearLayout>
</ScrollView>